--- a/client/index.html
+++ b/client/index.html
@@ -161,7 +161,7 @@
       padding: 1px;
       width: 100%;
       font-size: 15px;
-      z-index: 10;
+      z-index: 999;
       height: 20px;
       line-height: 18px;
     }
@@ -233,20 +233,58 @@
       position: absolute;
       top: 40px;
       right: 30px;
-      width: 100px;
-      height: 35px;
-      padding: 2px;
-      background-color: rgba(11, 0, 24, 0.486)
+      width: 120px;
+      height: 50px;
+      padding: 3px;
+      border-radius: 2px;
+      background-color: rgba(11, 0, 24, 0.6);
+
+      /* Draggable */
+      cursor: move;
+      z-index: 5;
     }
+
+    #editor-options:hover {
+      background-color: rgba(11, 0, 24, 0.8);
+    }
+
 
     #editor-options button {
       padding: 3px;
     }
 
+    #editor-options span {
+      color: white;
+      float: right;
+      font-size: 12px;
+      font-family: monospace;
+    }
+
     #view-stdout {
-      z-index: 99;
       position: absolute;
       top: 21px;
+    }
+
+    #view-html {
+      position: absolute;
+      top: 21px;
+      right: 0;
+      bottom: 0;
+      left: 0;
+    }
+
+    #view-view {
+      position: absolute;
+      top: 21px;
+      right: 0;
+      bottom: 0;
+      left: 0;
+    }
+
+    #view-iframe {
+      width: 100%;
+      height: 100%;
+      border: 0;
     }
   </style>
 </head>
@@ -262,7 +300,7 @@
       <div class="float-right">
         <span id="kam-views">
           <a href="javascript:void(0)" id='html' onclick="chView('html')">html</a> |
-          <a href="javascript:void(0)" id='html' onclick="chView('view')">view</a> |
+          <a href="javascript:void(0)" id='view' onclick="chView('view')">view</a>&nbsp;
           <a href="javascript:void(0)" id='server' onclick="chView('server')">server</a> |
           <a href="javascript:void(0)" id='stdout' onclick="chView('stdout')">stdout</a>
         </span>
@@ -306,7 +344,7 @@
       <p id="bio-change-instructions">To ensure this account belongs to you, add the <b id="bio-add-pin">[error, do not
           add this]</b> PIN to your Khan
         Academy bio. You can edit your bio
-        with <a href="https://www.khanacademy.org/profile/me">this link</a>.</p>
+        with <a href="https://www.khanacademy.org/profile/me" target="_blank">this link</a>.</p>
       <button class="btn btn-primary" id="btn-verify" onclick="verifyBioChange()">Verify</button>
     </div>
   </div>
@@ -339,13 +377,38 @@
         return x;
         }</div>
     </div>
-    <div id="view-html" class="container">
-      html view
+    <div id="view-html">
+      <div id="editor-html">Loading HTML...</div>
+    </div>
+    <div id="view-view">
+      <script type>
+        // Create the iframe
+        var iframe = document.createElement('iframe');
+        iframe.id = 'view-iframe';
+
+        // Listen for messages from the iframe
+        iframe.onload = function () {
+          iframe.contentWindow.addEventListener('message', event => {
+            // Detect if iframe is self
+            if (event.source !== iframe.contentWindow) {
+              return;
+            }
+            
+            console.log('Received message from iframe: ', event.data,event);
+            send("^" + JSON.stringify(event.data));
+        });
+        };
+
+        // Append iframe to document body
+        document.getElementById('view-view').appendChild(iframe);
+      </script>
     </div>
 
     <div id="editor-options">
+      <button class="btn btn-sm btn-info" id="editor-save" onclick="saveClientCode()">Save</button>
       <button class="btn btn-sm btn-success" id="editor-run" onclick="runServerCode()">Run</button>
       <button class="btn btn-sm btn-danger" id="editor-stop" onclick="stopServerCode()">Stop</button>
+      <span id="editor-status">Finished</span>
     </div>
   </div>
 
@@ -463,7 +526,7 @@
 
   <!-- SCRIPT.LOGIN -->
   <script type>
-    var bioChangePIN = "#" + Math.random().toString(36).substring(6, 10).toUpperCase();
+    var bioChangePIN = "#" + Math.random().toString(36).slice(6, 10).toUpperCase();
     var ppAnimation = 1;
     var ppAnimationTarget = 1;
     var ppShown = true;
@@ -598,13 +661,6 @@
   <script type>{
       { }// highlighting fixed in vscode
 
-
-      // Set KA editor
-      function putCode(code) {
-        console.log(`*puts code in editor*`, code);
-        //top.postMessage(JSON.stringify({ code }), "*")
-      }
-
       // Views setup
       var view = 'server'
       function chView(newView) {
@@ -617,10 +673,8 @@
         document.getElementById("view-" + newView).style.display = 'block';
 
         terminalActive = false;
-        if (newView == 'html') {
-          putCode(projectClientCode)
-        } else if (newView == 'server') {
-          // nothing
+        if (newView == 'view') {
+          runHtmlCode()
         } else if (newView == 'stdout') {
           terminalActive = true;
         }
@@ -707,7 +761,7 @@
         chPage('home-games-project-edit');
         projectServerCode = "Loading..."
         projectClientCode = "Loading...";
-        editor.getSession().setValue("Loading...");
+        editorServer.getSession().setValue("Loading...");
         send("!deno-get-code " + myProject.name);
       }
       function deleteProject() {
@@ -720,26 +774,81 @@
 
       function runServerCode() {
         chView('stdout');
-        let serverCode = editor.getSession().getValue();
+        let serverCode = editorServer.getSession().getValue();
         let obj = {
           project: myProject.name,
           code: serverCode
         }
-        send("!deno-run " + JSON.stringify(obj));
+        send("!deno-save-and-run-server " + JSON.stringify(obj));
       }
       function stopServerCode() {
         send("!deno-kill")
       }
+      function runHtmlCode() {
+        var htmlCode = editorHtml.getValue();
+        iframe.srcdoc = htmlCode; // iframe is global
+      }
+      function saveClientCode() {
+        document.getElementById("editor-save").disabled = true
+        let clientCode = editorHtml.getSession().getValue();
+        let obj = {
+          project: myProject.name,
+          code: clientCode
+        }
+        send("!deno-save-client " + JSON.stringify(obj));
+      }
+
+      // Make editor-options draggable
+      dragElement(document.getElementById("editor-options"));
+
+      function dragElement(elmnt) { // Source: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_draggable
+        var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
+        if (document.getElementById(elmnt.id + "header")) {
+          document.getElementById(elmnt.id + "header").onmousedown = dragMouseDown;
+        } else {
+          elmnt.onmousedown = dragMouseDown;
+        }
+        function dragMouseDown(e) {
+          e = e || window.event;
+          e.preventDefault();
+          pos3 = e.clientX;
+          pos4 = e.clientY;
+          document.onmouseup = closeDragElement;
+          document.onmousemove = elementDrag;
+        }
+        function elementDrag(e) {
+          e = e || window.event;
+          e.preventDefault();
+          pos1 = pos3 - e.clientX;
+          pos2 = pos4 - e.clientY;
+          pos3 = e.clientX;
+          pos4 = e.clientY;
+          elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
+          elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
+        }
+
+        function closeDragElement() {
+          document.onmouseup = null;
+          document.onmousemove = null;
+        }
+      }
 
 
       // Editor setup
-      var editor
-      function initEditor() {
-        editor = ace.edit("editor");
-        editor.setTheme("ace/theme/monokai");
-        editor.session.setMode("ace/mode/javascript");
+      var editorHtml
+      var editorServer
+      function initEditors() {
+        // HTML editor
+        editorHtml = ace.edit("view-html");
+        editorHtml.setTheme("ace/theme/monokai-light");
+        editorHtml.session.setMode("ace/mode/html");
+
+        // Server editor
+        editorServer = ace.edit("editor");
+        editorServer.setTheme("ace/theme/monokai");
+        editorServer.session.setMode("ace/mode/javascript");
       }
-      initEditor()
+      initEditors()
 
       // Page setup
       var page = "home"
@@ -783,24 +892,34 @@
 
       var terminalActive = false
       function onRecieve(data) {
-        console.log("%c" + data, 'background: #000; color: #ff00ff')
-        var firstArg, secondArg
-        if (data.includes(" ")) {
-          firstArg = data.substring(0, data.indexOf(" "))
-          secondArg = data.substring(data.indexOf(" ") + 1)
-        } else {
-          firstArg = data
-          secondArg = ""
+        if (data.startsWith("~")) {
+          // Send message to terminal if it is open
+          if (page == "home-games-project-edit") {
+            term.write(data.slice(1).replace(/\n/g, "\r\n"))
+          }
+          return
         }
+        if (data.startsWith("^")) {
+          // Send message to terminal if it is open
+          if (page == "home-games-project-edit") {
+            term.write(data.replace(/\n/g, "\r\n"))
+          }
+
+          // Also send message to iframe
+          iframe?.contentWindow?.postMessage(data.slice(1), '*');
+          return
+        } else {
+          if (data.startsWith("\\^")) {
+            data = data.slice(1)
+          }
+        }
+        console.log("%c" + data, 'background: #000; color: #ff00ff')
+        let [firstArg, secondArg] = data.split(/ (.+)/s)
+        
         if (firstArg == "deno-terminal-end") {
           term.nextLine()
-        } else if (terminalActive || data.startsWith("~")) {
-          if (data.startsWith("~")) {
-            term.write(data.substring(1).replace(/\n/g, "\r\n"))
-          } else {
-            term.write(data.replace(/\n/g, "\r\n"))
-            term.nextLine()
-          }
+        } else if (firstArg == "deno-save-client-success") {
+          document.getElementById("editor-save").disabled = false // enable button
         } else if (firstArg == "geo") {
           let geoData = JSON.parse(data.slice(4))
           myGeo = geoData
@@ -809,9 +928,10 @@
           populateProjects()
         } else if (firstArg == 'deno-set-server') {
           projectServerCode = secondArg
-          editor.getSession().setValue(projectServerCode)
+          editorServer.getSession().setValue(projectServerCode)
         } else if (firstArg == 'deno-set-client') {
           projectClientCode = secondArg
+          editorHtml.getSession().setValue(projectClientCode)
         } else if (firstArg == 'deno-add-project') {
           myProject = JSON.parse(secondArg)
           if (myProject.prevName) {
@@ -824,9 +944,6 @@
           removedProjectName = secondArg
           projects = projects.filter(p => p.name != removedProjectName)
           populateProjects()
-        }
-        else {
-          document.getElementById("output").innerHTML = data
         }
       }
 
@@ -850,7 +967,7 @@
           sendSdpPackets(JSON.stringify(data))
         }).on("connect", function () {
           isConnected = true
-          document.getElementById("kam-status").textContent = "Connected"
+          document.getElementById("kam-status").textContent = "✓"
           setTimeout(() => getProjects(), 1000)
         }).on("data", function (data) {
           onRecieve(data.toString())
@@ -982,20 +1099,22 @@
       } else if (term.currLine == "help\r") {
         term.nextLine()
       } else {
-        send(term.currLine.toString().trim())
+        ///send(term.currLine.toString().trim()) // todo only send if server is not running
       }
       term.currLine = "";
     };
     term.currLine = "";
     term.write('metaverse $ ')
     term.onKey(e => {
-      term.currLine += e.key;
-      term.write(e.key);
-      if (e.keyCode == 8) { // Backspace
+      if (e.key === "Backspace") { // Backspace
         term.write('\b \b');
         term.currLine = term.currLine.slice(0, -1);
-      } else if (e.key == '\r') { // Enter
+      } else if (e.key === '\r') { // Enter
+        term.write('\r\n');
         term.prompt()
+      } else {
+        term.currLine += e.key;
+        term.write(e.key);
       }
     })
     // Set theme to xterm.js
